test/libsolidity/syntaxTests/events/file_level_event_duplicate_definition.sol
event E();
event E();
// ----
// DeclarationError 5883: (0-10): Event with same name and parameter types defined twice.
